fixed stupid top/bottom overlap issue with NPCS

--- a/assets/src/sass/pages/_explore.scss
+++ b/assets/src/sass/pages/_explore.scss
@@ -939,7 +939,9 @@ html {
         }
         .pinpoint-container {
           bottom: 13rem;
+          left: 1rem;
           position: fixed;
+          z-index: 9;
 
           #open-pinpoint {
             cursor: pointer;
